fix layout issue

--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -35,20 +35,19 @@ body {
 }
 
 .container {
-  background-image: url(../images/bg-intro-mobile.png);
-  background-color: #ff7a7a;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-image: url(../images/bg-intro-mobile.png);
+  background-color: #ff7a7a;
 }
 @media (min-width: 850px) {
   .container {
-    background-image: url(../images/bg-intro-desktop.png);
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 6rem;
     width: 100%;
     height: 100%;
+    background-image: url(../images/bg-intro-desktop.png);
   }
 }
 
@@ -66,37 +65,38 @@ header {
 }
 
 .header__heading {
-  color: white;
-  font-size: 1.6rem;
-  letter-spacing: 0.06rem;
   padding: 0 2rem;
+  font-size: 1.6rem;
+  color: white;
+  letter-spacing: 0.06rem;
 }
 
 .header__paragraph {
+  padding: 1.2rem 2rem 0 2rem;
   color: white;
   line-height: 1.6rem;
-  padding: 1.2rem 2rem 0 2rem;
 }
 
 @media (min-width: 850px) {
   header {
-    margin-top: 0;
-    text-align: left;
     justify-self: center;
-    margin-left: 30%;
+    margin-top: 0;
+    margin-left: 63%;
+    margin-right: 15rem;
     padding-left: 2rem;
+    text-align: left;
   }
 
   .header__heading {
-    font-size: 3rem;
-    line-height: 3.5rem;
     margin-top: 0.75rem;
     padding: 0;
+    font-size: 3rem;
+    line-height: 3.5rem;
   }
 
   .header__paragraph {
-    max-width: 35rem;
     width: 100%;
+    max-width: 35rem;
     margin-top: 1.5rem;
     padding: 0;
   }
@@ -116,22 +116,21 @@ main {
     justify-content: center;
     width: 100%;
     max-width: 36rem;
-    padding-top: 0;
     padding-left: 1rem;
     padding-right: 1.5rem;
   }
 }
 
 .accent {
-  background-color: #6055a5;
-  border-radius: 0.75rem;
-  box-shadow: 0 0.5rem 0 rgba(102, 0, 0, 0.2);
-  color: white;
+  padding: 1.4rem 3.7rem 1rem 3.7rem;
   font-size: 0.6rem;
+  color: white;
   letter-spacing: 0.02rem;
   line-height: 1.5rem;
   text-align: center;
-  padding: 1.4rem 3.7rem 1rem 3.7rem;
+  background-color: #6055a5;
+  box-shadow: 0 0.5rem 0 rgba(102, 0, 0, 0.2);
+  border-radius: 0.75rem;
 }
 @media (min-width: 850px) {
   .accent {
@@ -149,12 +148,12 @@ main {
 }
 
 .form__container {
-  background-color: white;
   margin-top: 1.5rem;
   margin-bottom: 5rem;
-  border-radius: 0.75rem;
   padding-bottom: 1.5rem;
+  background-color: white;
   box-shadow: 0 0.5rem 0 rgba(102, 0, 0, 0.2);
+  border-radius: 0.75rem;
 }
 @media (min-width: 850px) {
   .form__container {
@@ -178,11 +177,11 @@ form input {
   height: 3.5rem;
   width: 100%;
   padding: 0.2rem 0 0 1.1rem;
-  border: 0.01rem solid #b9b6d3;
-  border-radius: 0.25rem;
   font-size: 0.9rem;
   font-weight: 600;
   letter-spacing: 0.03rem;
+  border: 0.01rem solid #b9b6d3;
+  border-radius: 0.25rem;
 }
 form input:focus {
   border: 0.1rem solid black;
@@ -199,23 +198,23 @@ form .error {
   background-position: top 50% right 1.5rem;
 }
 form .errMsgBox {
-  text-align: right;
-  color: #ff7a7a;
-  font-size: 0.7rem;
   margin-top: 0.5rem;
+  font-size: 0.7rem;
+  color: #ff7a7a;
+  text-align: right;
 }
 
 .btn__submit {
   height: 3.5rem;
   padding-top: 0.4rem;
-  border: 0;
-  background-color: #38cc8c;
-  color: white;
   font-size: 0.9rem;
   font-weight: 400;
+  color: white;
   letter-spacing: 0.05rem;
   text-transform: uppercase;
+  background-color: #38cc8c;
   box-shadow: 0 0.2rem 0 #2ba671;
+  border: 0;
   cursor: pointer;
 }
 .btn__submit:hover {
@@ -228,12 +227,12 @@ form .errMsgBox {
 }
 
 .term {
-  text-align: center;
   margin-top: 0.5rem;
   padding: 0 2.5rem;
   font-size: 0.7rem;
   color: #b9b6d3;
   line-height: 1.5rem;
+  text-align: center;
 }
 @media (min-width: 850px) {
   .term {
@@ -242,9 +241,9 @@ form .errMsgBox {
 }
 
 .term__lnk {
-  text-decoration: none;
-  color: #ff7a7a;
   font-weight: 600;
+  color: #ff7a7a;
+  text-decoration: none;
 }
 .term__lnk:hover {
   text-decoration: underline;
