--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -19,7 +19,8 @@ header {
   header {
     justify-self: center;
     margin-top: 0;
-    margin-left: 30%;
+    margin-left: 63%;
+    margin-right: 15rem;
     padding-left: 2rem;
     text-align: left;
   }
@@ -50,7 +51,6 @@ main {
     justify-content: center;
     width: 100%;
     max-width: 36rem;
-    padding-top: 0;
     padding-left: 1rem;
     padding-right: 1.5rem;
   }
