--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -15,7 +15,6 @@ body {
   @media (min-width: $breakpoint-md) {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 6rem;
     width: 100%;
     height: 100%;
     background-image: url(../images/bg-intro-desktop.png);
